[gd_scene load_steps=10 format=3 uid="uid://us0xhbf1mfxq"]

[ext_resource type="Texture2D" uid="uid://ba14vl51de4cd" path="res://assets/cgs/main_menu.png" id="1_dd0tu"]
[ext_resource type="Script" path="res://helpers/ui/main_menu.gd" id="1_liu4u"]
[ext_resource type="FontFile" uid="uid://b8e14mochwvdi" path="res://assets/fonts/Pixbye Breaks.ttf" id="2_fvmkg"]
[ext_resource type="FontFile" uid="uid://wfxyqn3j12v7" path="res://assets/fonts/CT Galbite-Regular.ttf" id="3_6myah"]
[ext_resource type="StyleBox" uid="uid://7117umj6kpmy" path="res://helpers/ui/pause.tres" id="4_rdvqn"]
[ext_resource type="AudioStream" uid="uid://ma8oa1b6hg7c" path="res://assets/music/main_menu_lofi.wav" id="6_va3iq"]

[sub_resource type="Animation" id="Animation_pkim6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Black:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_sk65r"]
resource_name = "bg_show"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Black:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8l1qs"]
_data = {
"RESET": SubResource("Animation_pkim6"),
"bg_show": SubResource("Animation_sk65r")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_liu4u")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenuIllust" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_dd0tu")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 678.0
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_fvmkg")
theme_override_font_sizes/font_size = 80
text = "hungre etter"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_constants/separation = 32

[node name="Play" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.901961, 0.662745, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_6myah")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = ExtResource("4_rdvqn")
theme_override_styles/pressed = ExtResource("4_rdvqn")
theme_override_styles/normal = ExtResource("4_rdvqn")
text = "Play"

[node name="Quit" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.901961, 0.662745, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_6myah")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = ExtResource("4_rdvqn")
theme_override_styles/pressed = ExtResource("4_rdvqn")
theme_override_styles/normal = ExtResource("4_rdvqn")
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Black" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_va3iq")
volume_db = -15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8l1qs")
}

[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
